--- a/Default.cshtml
+++ b/Default.cshtml
@@ -1,16 +1,6 @@
 ﻿@{
-    
+    Page.Title= "Home";
+    Layout = "~/Layout/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>My Site's Title</title>
-        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    </head>
-    <body>
-        
-    </body>
-</html>
+<p>Hello World!</p>
