--- a/Project/css/bootstrap-theme.css
+++ b/Project/css/bootstrap-theme.css
@@ -1,8 +1,15 @@
-/*!
+.class {
+    
+}
+
+/*
+
  * Bootstrap v3.3.6 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
+
+*/
+
 .btn-default,
 .btn-primary,
 .btn-success,
@@ -585,3 +592,4 @@ fieldset[disabled] .btn-danger.active {
           box-shadow: inset 0 1px 3px rgba(0, 0, 0, .05), 0 1px 0 rgba(255, 255, 255, .1);
 }
 /*# sourceMappingURL=bootstrap-theme.css.map */
+
