--- a/Project/css/bootstrap.css
+++ b/Project/css/bootstrap.css
@@ -14,6 +14,14 @@
     background-color: #f5f5f5;
 }
 
+#headerLeft {
+    float: left;
+}
+
+#headerRight {
+    float: right;
+}
+
 html {
     font-family: sans-serif;
     -webkit-text-size-adjust: 100%;
