Websitestructuur, register commenting, roles

--- a/ComeniusCarrousel/User_Management/Register.cshtml
+++ b/ComeniusCarrousel/User_Management/Register.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    if(!Roles.IsUserInRole("God"))
+    /*if(!Roles.IsUserInRole("God"))
     {
         Response.Redirect("~/");
     }
-    WebSecurity.RequireRoles(new string[] {"God"});
+    WebSecurity.RequireRoles(new string[] {"God"});*/
 
     Layout = "~/_Layout.cshtml";
     Page.Title = "Register";
