--- a/ComeniusCarrousel/css/mainstyle.css
+++ b/ComeniusCarrousel/css/mainstyle.css
@@ -1,2 +1,95 @@
+@import url(https://fonts.googleapis.com/css?family=Arvo:400,400italic,700,700italic);
+
+/*Colors*/
+.comeniusblauw {
+    background-color: #0085BC !important; }
+.comeniusgroen {
+    background-color: #C7D41B !important; }
+
+.glyphicon {
+    color: #585858;
+}
+
+label {
+    font-weight: normal;
+}
+
+::selection {
+    background-color: rgba(0, 0, 0, 0.25);
+}
+
+.page-header {
+    border-bottom: 0px solid #eee;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 15%;
+    padding: 24px 0px 12px 0px;
+    background-color: rgba(0, 0, 0, 0.05); 
+}
+
+#floatLeft {
+    float: left;
+}
+
+#floatRight {
+    float: right;
+}
+
 body {
+    background-color: #0085BC;
+    color: #fff;
+    font-family: Arvo;
+}
+
+a {
+    color: #337ab7;
+    text-decoration: none;
+}
+
+a:hover, a:focus {
+    color: #23527c;
+    text-decoration: underline;
+}
+
+a:focus {
+    outline: thin dotted;
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #969696;
+    background-color: #eeeeee;
+    background-image: none;
+    border: 0px solid #ccc;
+    border-radius: 0px;
+    -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+#content {
+    background: #fff;
+    box-shadow: 0px 2px 10px rgba(67, 67, 67, 0.75);
+    color: #585858;
+    border-style: solid;
+    border-width: 0px 0px 10px 0px;
+    border-color: #ccc;
+}
+
+.btn {
+    border-radius: 0px;
 }
