--- a/ComeniusCarrousel/About.cshtml
+++ b/ComeniusCarrousel/About.cshtml
@@ -1,15 +1,6 @@
 ﻿@{
-    
+    Page.Title= "About";
+    Layout = "~/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-    </head>
-    <body>
-        
-    </body>
-</html>
+@RenderPage("~/_AboutDetails.cshtml")
