--- a/ComeniusCarrousel/_Layout.cshtml
+++ b/ComeniusCarrousel/_Layout.cshtml
@@ -17,7 +17,21 @@
                 <div class="container">
                     <div id="headerLeft"><h1>Logo</h1></div>
                     <div id="headerRight">
-                        @if(!WebSecurity.IsAuthenticated){<a href="~/User_Management/Logout?ReturnUrl=~@Request.Url.AbsolutePath"><span class="glyphicon glyphicon-log-out"></span> Log Out</a>}
+                        @if(WebSecurity.IsAuthenticated)
+                        {
+                            <a href="~/User_Management/Logout?ReturnUrl=~@Request.Url.AbsolutePath">
+                                <span class="glyphicon glyphicon-log-out"></span> Log out
+                            </a>
+                        }
+                        else
+                        {
+                            <a href="~/User_Management/Login?ReturnUrl=~@Request.Url.AbsolutePath">
+                                <span class="glyphicon glyphicon-log-in"></span> Log in
+                            </a>
+                        }
+                        <a href="~/User_Management/About?ReturnUrl=~@Request.Url.AbsolutePath">
+                                <span class="glyphicon glyphicon-question-sign"></span> About
+                        </a>
                     </div>
                 </div>
             </div>
