Added vakken for WIP

--- a/ComeniusCarrousel/Leerling/_Leerling.cshtml
+++ b/ComeniusCarrousel/Leerling/_Leerling.cshtml
@@ -11,3 +11,5 @@
 <p>E-Mail van je verzorger: @leerling.MailVerzorger</p>
 <p>Talentstroom: @leerling.TalentstroomVak</p>
 <p>Aangemeld: @leerling.Aangemeld</p>
+<br>
+<p>Vakken: WIP</p>
