--- a/ComeniusCarrousel/User_Management/Login.cshtml
+++ b/ComeniusCarrousel/User_Management/Login.cshtml
@@ -6,19 +6,19 @@
     var password = "";
     bool rememberMe = false;
 
-    Validation.RequireField("userName", "You must enter a UserName");
+    Validation.RequireField("userName", "U moet een Email adres invoeren.");
     Validation.Add("userName",
         Validator.StringLength(
             maxLength: 400,
             minLength: 1,
-            errorMessage: "Username can not contain more than 400 characters"));
+            errorMessage: "Email adres mag niet meer dan 400 tekens bevatten."));
 
-    Validation.RequireField("password", "You must enter a password");
+    Validation.RequireField("password", "U moet een wachtwoord invoeren");
     Validation.Add("password", 
         Validator.StringLength(
             maxLength: Int32.MaxValue,
             minLength: 6,
-            errorMessage: "Password must contain at least 6 characters"));
+            errorMessage: "Wachtwoord met minstens 6 tekens bevatten."));
 
     if(IsPost)
     {
@@ -38,7 +38,7 @@
             }
             else
             {
-                ModelState.AddFormError("The provided username or password is invalid");
+                ModelState.AddFormError("Het gegeven email adres en/of wachtwoord is onjuist.");
             }
         }
     }
@@ -47,15 +47,15 @@
     <h2>Login</h2>
     <form method="post">
         @AntiForgery.GetHtml()
-        @Html.ValidationSummary("Login was unsuccessful. Please correct the errors and try again.", excludeFieldErrors: true, htmlAttributes: null)
+        @Html.ValidationSummary("Inloggen was onsuccesvol. Corrigeer de gegeven fouten en probeer opnieuw.", excludeFieldErrors: true, htmlAttributes: null)
         <fieldset>
             <div class="form-group">
-                <label for="userName"><span class="glyphicon glyphicon-user"></span>&nbsp; User Name</label>
+                <label for="userName"><span class="glyphicon glyphicon-user"></span>&nbsp; Email adres</label>
                 <input type="text" id="userName" name="userName" value="@userName" class="form-control">
                 @Html.ValidationMessage("userName")
             </div>
             <div class="form-group">
-                <label for="password"><span class="glyphicon glyphicon-check"></span>&nbsp; Password</label>
+                <label for="password"><span class="glyphicon glyphicon-check"></span>&nbsp; Wachtwoord</label>
                 <input type="password" id="password" name="password" value="@password" class="form-control">
                 @Html.ValidationMessage("password")
             </div>
