--- a/ComeniusCarrousel/_Layout.cshtml
+++ b/ComeniusCarrousel/_Layout.cshtml
@@ -31,6 +31,9 @@
                                 <span class="glyphicon glyphicon-log-in" style="color:#fff"></span> Log in
                             </a>
                         }
+                        <a href="~/User_Management/About?ReturnUrl=~@Request.Url.AbsolutePath" style="color: #fff;">
+                                <span class="glyphicon glyphicon-question-sign" style="color:#fff"></span> About
+                        </a>
                     </div>
                 </div>
             </div>
