spaces added tussen vakken

--- a/ComeniusCarrousel/Leerling/_Leerling.cshtml
+++ b/ComeniusCarrousel/Leerling/_Leerling.cshtml
@@ -12,9 +12,9 @@
 <p>Talentstroom: @leerling.TalentstroomVak</p>
 <p>Aangemeld: @leerling.Aangemeld</p>
 <br>
-<p>Vakken: 
+<p>Vakken:
     @foreach (string vak in leerling.KeuzeVakken())
     {
-        @vak;
+     <span>@vak</span>
     }
 </p>
