Push it to the Limit

--- a/ComeniusCarrousel/_AboutDetails.cshtml
+++ b/ComeniusCarrousel/_AboutDetails.cshtml
@@ -2,4 +2,8 @@
     
 }
 
-<p>Greetings, planet!</p>
+<p> CSG Comenius vindt het van groot belang dat haar studenten goed voorbereid en met groot vertrouwen de toekomst tegemoet zullen gaan.
+    Het Vakkencarrousel is ontstaan uit deze denkwijze en wordt ingezet ter impressie van vakken die nieuw zullen zijn voor aanstaande bovenbouw leerlingen.
+    Uiteraard zal dit niet huidige talentontwikkelingen in de weg staan. Wij zullen middels mail goed contact houden hoe jouw status met betrekking tot deze fantastische 
+    voorbereidende middagen is gevorderd. Meld je nu aan voor slechts $4.95 en neem gerust je ouders mee, zolang dezen aangemeld worden. <em> A Bop It</em>    
+</p>
