+ 'text-align: justify' in css geworpen

--- a/ComeniusCarrousel/css/mainstyle.css
+++ b/ComeniusCarrousel/css/mainstyle.css
@@ -93,6 +93,7 @@ a:focus {
     border-color: #ccc;
     width: 800px;
     margin-top: 4%;
+    text-align: justify;
 }
 
 @media (max-width: 800px) {
