--- a/ComeniusCarrousel/App_Code/LeerlingRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/LeerlingRepo.cshtml
@@ -24,26 +24,7 @@
             this.aangemeld = aangemeld;
         }
 
-        public static Leerling GetLeerling(int id)
-        {
-            var db = Database.Open(App.DataBase);
-            var data = db.QuerySingle("SELECT * FROM Gebruiker WHERE UserId = @0", id);
-            var leerlingData = db.QuerySingle("SELECT * FROM Leerling WHERE UserId = @0", id);
-            var userDb = Database.Open(App.AuthDataBase);
-            var userData = userDb.QuerySingle("SELECT UserName FROM UserProfile WHERE UserId = @0", id);
-            if(data != null && userData != null)
-            {
-                Leerling leerling = new Leerling(id, userData.UserName, data.Voornaam, data.Achternaam,
-                    leerlingData.Klas, leerlingData.Niveau, leerlingData.Leerlingnummer, leerlingData.InstroomLeerling,
-                    leerlingData.MailVerzorger, leerlingData.TalentstroomVak, leerlingData.Aangemeld);
-                db.Close();
-                userDb.Close();
-                return leerling;
-            }
-            db.Close();
-            userDb.Close();
-            return null;
-        }
+        
 
         public List<string> KeuzeVakken()
         {
@@ -106,5 +87,46 @@
                 Repository.CRUD.doSimpleIdUpdate(table, "Aangemeld", Convert.ToString(value), idName, userId);
             }
         }
+    }
+
+    public static Leerling GetLeerling(int id)
+    {
+        var db = Database.Open(App.DataBase);
+        var data = db.QuerySingle("SELECT * FROM Gebruiker WHERE UserId = @0", id);
+        var leerlingData = db.QuerySingle("SELECT * FROM Leerling WHERE UserId = @0", id);
+        var userDb = Database.Open(App.AuthDataBase);
+        var userData = userDb.QuerySingle("SELECT UserName FROM UserProfile WHERE UserId = @0", id);
+        if(data != null && userData != null)
+        {
+            Leerling leerling = new Leerling(id, userData.UserName, data.Voornaam, data.Achternaam,
+                leerlingData.Klas, leerlingData.Niveau, leerlingData.Leerlingnummer, leerlingData.InstroomLeerling,
+                leerlingData.MailVerzorger, leerlingData.TalentstroomVak, leerlingData.Aangemeld);
+            db.Close();
+            userDb.Close();
+            return leerling;
+        }
+        db.Close();
+        userDb.Close();
+        return null;
+    }
+
+    public static List<Leerling> GetLeerlingen()
+    {
+        List<Leerling> leerlingen = new List<Leerling>();
+        var db = Database.Open(App.DataBase);
+        var data = db.Query("SELECT * FROM Gebruiker Gebr INNER JOIN Leerling Leerl ON Gebr.UserId = Leerl.UserId");
+        if(data != null)
+        {
+            foreach (var row in data)
+            {
+                leerlingen.Add(new Leerling(row.UserId,  null, row.Voornaam, row.Achternaam,
+                    row.Klas, row.Niveau, row.Leerlingnummer, row.InstroomLeerling,
+                    row.MailVerzorger, row.TalentstroomVak, row.Aangemeld));
+            }
+            db.Close();
+            return leerlingen;
+        }
+        db.Close();
+        return null;
     }
 }
