Decaan toevoegen add + little changes DecaanOverzicht

--- a/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
@@ -1,15 +1,9 @@
 ﻿@{
+    Layout = "~/_Layout.cshtml";
+    Page.Title = "DecaanOverzicht";
     
 }
 
-<!DOCTYPE html>
-
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-    </head>
-    <body>
-        
-    </body>
-</html>
+<a href="~/Admin/Decaan/DecaanToevoegen">
+    <span class="glyphicon glyphicon-pencil"></span> Nieuwe decaan aanmaken
+</a>
