_Leerling.cshtml update, _Layout.cshtml & Mainstyle.css aanvulling

--- a/ComeniusCarrousel/_Layout.cshtml
+++ b/ComeniusCarrousel/_Layout.cshtml
@@ -53,9 +53,9 @@ else
                 </div>
                 <div id="floatRight">
                     <ul style="list-style-type:none">
-                        <li><a href="google.com" style="color: #fff">Link 1</a></li>
-                        <li><a href="google.com" style="color: #fff">Link 2</a></li>
-                        <li><a href="google.com" style="color: #fff">Link 3</a></li>
+                        <li><a href="http://google.com" style="color: #fff">Link 1</a></li>
+                        <li><a href="http://google.com" style="color: #fff">Link 2</a></li>
+                        <li><a href="http://google.com" style="color: #fff">Link 3</a></li>
                     </ul>
                 </div>
             </div>
