--- a/ComeniusCarrousel/Leerling/_Leerling.cshtml
+++ b/ComeniusCarrousel/Leerling/_Leerling.cshtml
@@ -2,23 +2,63 @@
     int id = WebSecurity.CurrentUserId;
     LeerlingRepo.Leerling leerling = LeerlingRepo.GetLeerling(id);
 }
-
-<p>Naam: @leerling.Voornaam @leerling.Achternaam</p>
-<p>Leerling Nummer: @leerling.Leerlingnummer</p>
-<p>Klas: @leerling.Klas</p>
-<p>Niveau: @leerling.Niveau</p>
-<p>E-Mail: @leerling.UserName</p>
-<p>E-Mail van je verzorger: @leerling.MailVerzorger</p>
-<p>Talentstroom: @leerling.TalentstroomVak</p>
-<p>Aangemeld: @leerling.Aangemeld</p>
-<br>
-<p>Vakken:
-    @foreach (string vak in leerling.KeuzeVakken())
-    {
-     <span>@vak</span>
-    }
-</p>
-
+<div class="panel panel-default">
+    <div class="panel-heading">
+        Leerlinggegevens
+    </div>
+    <div class="panel-body">
+        <table class="table">
+            <tr>
+                <td>Naam:</td>
+                <td>@leerling.Voornaam @leerling.Achternaam</td>
+            </tr>
+            <tr>
+                <td>Leerlingnummer:</td>
+                <td>@leerling.Leerlingnummer</td>
+            </tr>
+            <tr>
+                <td>Klas:</td>
+                <td>@leerling.Klas</td>
+            </tr>
+            <tr>
+                <td>Niveau:</td>
+                <td>@leerling.Niveau</td>
+            </tr>
+            <tr>
+                <td>E-Mail:</td>
+                <td>@leerling.UserName</td>
+            </tr>
+            <tr>
+                <td>E-Mail Verzorger:</td>
+                <td>@leerling.MailVerzorger</td>
+            </tr>
+            <tr>
+                <td>Talentstroom:</td>
+                <td>@leerling.TalentstroomVak</td>
+            </tr>
+            <tr>
+                <td>Aangemeld:</td>
+                @if (leerling.Aangemeld)
+                {
+                    <td id="succesText">Aangemeld</td> 
+                }
+                else 
+                {
+                    <td id="dangerText">Niet aangemeld</td>
+                }
+            </tr>
+            <tr>
+                <td>Vakken:</td>
+                <td>
+                    @foreach (string vak in leerling.KeuzeVakken())
+                    {
+                        <span>@vak</span>
+                    }
+                </td>
+            </tr>
+        </table> 
+    </div>
+</div>
 <a href="~/Leerling/Keuze">
     <span class="glyphicon glyphicon-pencil"></span> Keuze
 </a>
