--- a/ComeniusCarrousel/css/mainstyle.css
+++ b/ComeniusCarrousel/css/mainstyle.css
@@ -36,7 +36,7 @@ label {
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 15%;
+    height: 124px;
     padding: 24px 0px 12px 0px;
     background-color: rgba(0, 0, 0, 0.10);
     margin-top: 100px;
@@ -56,7 +56,7 @@ body {
     background-color: #0085BC;
     color: #fff;
     font-family: Arvo;
-    padding-bottom: 15%;
+    padding-bottom: 124px;
 }
 
 a {
