--- a/ComeniusCarrousel/Leerling/_Leerling.cshtml
+++ b/ComeniusCarrousel/Leerling/_Leerling.cshtml
@@ -59,6 +59,6 @@
         </table> 
     </div>
 </div>
-<a href="~/Leerling/Keuze">
-    <span class="glyphicon glyphicon-pencil"></span> Keuze
+<a href="~/Leerling/Keuze" class="btn btn-default" role="button">
+    <span class="glyphicon glyphicon-pencil"></span>&nbsp; Voer keuzevakken in
 </a>
