--- a/ComeniusCarrousel/_Layout.cshtml
+++ b/ComeniusCarrousel/_Layout.cshtml
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8" />
         <title>@Page.Title</title>
-        <link rel="icon" href="favicon.ico">
+        <link rel="shortcut icon" type="image/png" href="favicon.png"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="~/css/bootstrap.css" type="text/css">
         <link href="~/css/bootstrap-theme.css" rel="stylesheet" type="text/css">
