Mail Armor, I'm A Hunter me go face

--- a/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
@@ -1,15 +1,9 @@
 ﻿@{
-    
+    Layout = "~/_Layout.cshtml";
+    // Connectie Database
 }
 
-<!DOCTYPE html>
-
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-    </head>
-    <body>
-        
-    </body>
-</html>
+        <p> <a href="~/Decaan/Mail/MailToevoegen.cshtml">
+            <span class="glyphicon glyphicon-pencil"></span> Nieuwe Mail
+            </a>
+        </p>
